<resources>
    <string name="app_name">base</string>
    <string name="base_name">library-base</string>
    <string name="base_no_more_data">"没有更多了"</string>
    <string name="base_empty_tips_null">暂无数据</string>
    <string name="base_empty_tips_netword">请检查你的网络连接</string>
    <string name="base_empty_tips_btn">重试</string>
    <string name="base_activity_empty">Activity(empty)</string>
    <string name="base_activity_placeholder">Activity(placeholder)</string>
    <string name="base_activity_with_convertor">Activity with Convertor</string>
    <string name="base_single_fragment_custom">single Fragment(custom)</string>
    <string name="base_multiple_fragment">multiple Fragment</string>
    <string name="base_multiple_fragment_viewpager">multiple Fragment+ViewPager</string>
    <string name="base_view_timeout">View(timeout)</string>
    <string name="base_animat_callback">Animat Callback</string>
    <string name="base_keep_title_bar_in_fragment">keep title bar in Fragment</string>
    <string name="base_loadsir">LoadSir</string>
    <string name="base_success">Success</string>
    <string name="base_keep_title_bar">keep title bar</string>
    <string name="base_fine_no_data">fine, no data.</string>
    <string name="base_click_me_to_retry">click me to retry!</string>
    <string name="base_best_practices">best practices</string>
    <string name="base_default_loadsir_callback">default LoadSir Callback</string>
    <string name="base_keep_title_bar_in_activity">keep title bar in Activity</string>
    <string name="res_getcode">重获验证码</string>
    <string name="phone_code_intput">验证码</string>
    <string name="sign_get_code">获取验证码</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="card_type">证件类型</string>
    <string name="card_num">证件号</string>
    <string name="card">身份证</string>
    <string name="prove_notes">认证须知</string>


    <string name="base_card">名片</string>
    <string name="base_phone_num">手机</string>
    <string name="base_telephone">电话</string>
    <string name="base_phone">手机号码</string>
    <string name="base_home_phone">电话号码</string>
    <string name="base_mail">邮箱</string>
    <string name="base_save">保存</string>
    <string name="base_qq">QQ</string>
    <string name="base_address">地址</string>
    <string name="base_wechat">微信</string>
    <string name="base_moments">朋友圈</string>
    <string name="base_alipay">支付宝</string>
    <string name="base_weibo">微博</string>
    <string name="base_display">默认显示</string>
    <string name="base_next">下一步</string>
    <string name="base_confirm">确认</string>


    <string name="base_create_group">发起群聊</string>
    <string name="base_add_card">添加名片</string>
    <string name="base_grouping">分组管理</string>
    <string name="base_face">人脸识别</string>
    <string name="base_scan">扫一扫</string>

    <string name="base_manage">管理</string>
    <string name="base_enterprise">企业</string>
    <string name="base_company">公司</string>
    <string name="base_job">职称</string>
    <string name="base_job2">职位</string>

    <string name="contacts">人脉</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="search">搜索</string>
    <string name="praised">获赞</string>
    <string name="base_dynamic">动态</string>
    <string name="base_topic">话题</string>
    <string name="base_city">城市</string>
    <string name="base_city_details">城市详情</string>
    <string name="base_meeting">会议</string>
    <string name="base_hot_topic">热门话题</string>
    <string name="base_hot_city">热门城市</string>
    <string name="base_look_topic">查看更多话题</string>
    <string name="base_look">查看</string>

    <string name="base_send_card">递名片</string>
    <string name="base_edit_card">编辑名片</string>
    <string name="base_create_card">创建名片</string>
    <string name="base_send">发消息</string>
    <string name="base_menu_change">交换名片</string>
    <string name="base_mind_ground">智能分组</string>

    <string name="base_lately_time">最近联系时间</string>
    <string name="base_location">所在地</string>
    <string name="base_industry">行业</string>

    <string name="base_add_bg">添加封面图</string>
    <string name="base_add_content">添加导读内容</string>
</resources>
