<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/normal_bg_menu"
    android:gravity="center_vertical"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/rl_first"
        android:layout_width="wrap_content"
        android:layout_height="52.5dp"
        android:paddingRight="62dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:src="@mipmap/icon_menu_scan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:text="@string/base_scan"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_second"
        android:layout_width="match_parent"

        android:layout_height="52.5dp"
        android:background="@color/menu_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_menu_face" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:text="@string/base_face"
            android:textColor="#fff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="48dp"
            android:background="@color/view_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_third"
        android:layout_width="match_parent"
        android:layout_height="52.5dp"
        android:background="@color/menu_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_menu_add_card" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="48dp"
            android:background="@color/view_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:text="@string/base_add_card"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_forth"
        android:layout_width="match_parent"
        android:layout_height="52.5dp"
        android:background="@color/menu_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_menu_grouping" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="48dp"
            android:text="@string/base_grouping"
            android:textColor="#fff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="48dp"
            android:background="@color/view_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fifth"
        android:layout_width="match_parent"
        android:layout_height="52.5dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="48dp"
            android:background="@color/view_color" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_menu_create_group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="48dp"
            android:text="@string/base_create_group"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>

