<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="bottom"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/layout_custom_container"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/normal_bg_black_1f_half"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="递名片到"
            android:textColor="@color/black_8e" />

        <LinearLayout
            android:id="@+id/ll_top_container"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wechat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/base_icon_share_wechat"
                android:text="@string/base_wechat"
                android:textColor="@color/gray_bc"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_moments"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/base_icon_share_wechat_quan"
                android:text="@string/base_moments"
                android:textColor="@color/gray_bc"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_qq"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/base_icon_share_qq"
                android:text="@string/base_qq"
                android:textColor="@color/gray_bc"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_weibo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/base_icon_share_weibo"
                android:text="@string/base_weibo"
                android:textColor="@color/gray_bc"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/ll_top_container"
            android:background="#2A2E44" />

        <RelativeLayout
            android:id="@+id/rl_link"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/line"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/normal_bg_gray_tran2a"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/base_icon_link" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/line"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/rl_link"
            android:background="@drawable/normal_bg_gray_tran2a"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/base_icon_code" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/line"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/rl_code"
            android:background="@drawable/normal_bg_gray_tran2a"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/base_icon_msg" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/normal_bg_yellow0"
            android:text="取消" />
    </RelativeLayout>

</LinearLayout>