<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.find.ui.viewmodel.FindViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_15"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@mipmap/find_icon_dynamic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/base_dynamic"
                        android:textColor="@color/gray_bc"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_topic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@mipmap/find_icon_topic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/base_topic"
                        android:textColor="@color/gray_bc"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@mipmap/find_icon_city" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/base_city"
                        android:textColor="@color/gray_bc"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_meeting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:src="@mipmap/find_icon_meeting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/base_meeting"
                        android:textColor="@color/gray_bc"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <cn.bingoogolapple.bgabanner.BGABanner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_below="@+id/ll"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                app:banner_pageChangeDuration="1000"
                app:banner_pointAutoPlayAble="true"
                app:banner_pointContainerBackground="@android:color/transparent"
                app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
                app:banner_pointTopBottomMargin="15dp"
                app:banner_transitionEffect="alpha" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/banner"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:tabBackground="@color/transparent"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed" />

            <com.benwunet.base.view.ScrollByViewpager
                android:id="@+id/vp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tl"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>
</layout>
