<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.home.ui.viewmodel.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_15"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="235dp"
            android:layout_height="370dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/black_29"
            app:cardElevation="11dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/normal_bg_black29"
                android:orientation="vertical">


                <com.benwunet.base.view.RoundImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/user_home_bg"
                    app:leftTop_corner_radius="11dp"
                    app:rightTop_corner_radius="11dp"
                    app:roun_type="round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="28dp"
                    android:background="@color/black_29"
                    android:text="佳音"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="本无网络科技有限公司"

                    android:textColor="@color/black_8e"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="经理"
                    android:textColor="@color/black_8e"
                    android:textSize="13sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="34dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginRight="33dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:background="@drawable/shape_circle_dot_black29">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/home_icon_look_card"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/base_look"
                android:textColor="@color/black_8e"
                android:textSize="12sp" />

        </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginRight="33dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:background="@drawable/shape_circle_dot_black29">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_icon_edit_card"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/base_edit_card"
                    android:textColor="@color/black_8e"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:background="@drawable/shape_circle_dot_black29">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_icon_send_card"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/base_send_card"
                    android:textColor="@color/black_8e"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
